# test_gtest

./: .gitignore  CMakeLists.txt
code/: CMakeLists.txt  TestClass.cpp  TestClass.h  main.cpp
tests/: CMakeLists.txt  FileIOTests.cpp  TestClassTests.cpp
